--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ jQuery(document).ready(function($){
 &lt;script&gt;
 jQuery(document).ready(function($){
 	$('.ttooltip').ttooltip({
-		trigger    :'hover', 
+		trigger    :'hover', /* 'hover', 'mouseenter' or 'click'*/
 		followmouse: true
 	});
 });
