Update to v2, Change license to MIT License

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ jQuery(document).ready(function($){
 <li><strong>Cross browser</strong>, I have tested on latest Mozilla Firefox, Safari, Opera, and IE9</li>
 <li><strong>Manual close button</strong>, optionally</li>
 <li><strong>Callback</strong>, you can run callback when tooltip is loaded (opened) or closed</li>
+<li><strong>Free and Open Source</strong>, tTooltip is licensed under MIT License</li>
 
 </ul>
 <h2>How to use</h2>
